--- a/views/category.html
+++ b/views/category.html
@@ -38,21 +38,43 @@
                 <div class="product-pagination text-center">
                     <nav>
                         <ul class="pagination">
+
+                        {loop="$previous"}
                         <li>
-                            <a href="#" aria-label="Previous">
+                            <a href="{$value.previous}" aria-label="Previous">
                             <span aria-hidden="true">«</span>
                             </a>
                         </li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
+                        {/loop}
+
+
+
+                        {loop="$pages"}
+                        <li><a href="{$value.link}">{$value.page}</a></li>
+                        
+                        
+                        {/loop}
+
+
+                        {loop="$next"}
                         <li>
-                            <a href="#" aria-label="Next">
+                            <a href="{$value.next}" aria-label="Next">
                             <span aria-hidden="true">»</span>
                             </a>
                         </li>
+                        
+                        {/loop}
+
+
+                        <!--
+                        {loop="$next"}
+                        <li>
+                            <a href="{$value.next}" aria-label="Next">
+                            <span aria-hidden="true">»</span>
+                            </a>
+                        </li>
+                        {/loop}
+                        -->
                         </ul>
                     </nav>                        
                 </div>
