Added Product Insertion in the Shopping Cart

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="single-promo promo2">
                         <i class="fa fa-truck"></i>
-                        <p>Frete grátis</p>
+                        <p>Transporte grátis</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -89,7 +89,7 @@
                                 <div class="product-f-image">
                                     <img src="{$value.desphoto}" alt="">
                                     <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Comprar</a>
+                                        <a href="/cart/{$value.idproduct}/add" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Comprar</a>
                                         <a href="/products/{$value.desurl}" class="view-details-link"><i class="fa fa-link"></i> Ver Detalhes</a>
                                     </div>
                                 </div>
