--- a/views/cart.html
+++ b/views/cart.html
@@ -21,9 +21,11 @@
 
                         <form action="/checkout">
                             
+                            
                             <div class="alert alert-danger" role="alert">
-                            Error!
+                            
                             </div>
+                            
 
                             <table cellspacing="0" class="shop_table cart">
                                 <thead>
@@ -78,9 +80,9 @@
                                     <h2>Cálculo de Portes de Envio</h2>
                                     
                                     <div class="coupon">
-                                        <label for="cep">CEP:</label>
-                                        <input type="text" placeholder="00000-000" value="" id="cep" class="input-text" name="zipcode">
-                                        <input type="submit" formmethod="post" formaction="/cart/freight" value="CÁLCULAR" class="button">
+                                        <label for="cep">Código Postal:</label>
+                                        <input type="text" placeholder="0000-000" value="{$cart.deszipcode}" id="cep" class="input-text" name="zipcode">
+                                        <input type="submit" formmethod="post" formaction="/cart/freight" value="CALCULAR" class="button">
                                     </div>
 
                                 </div>
@@ -93,17 +95,17 @@
                                         <tbody>
                                             <tr class="cart-subtotal">
                                                 <th>Subtotal</th>
-                                                <td><span class="amount">$700.00</span></td>
+                                                <td><span class="amount">€{function="formatPrice($cart.vlsubtotal)"}</span></td>
                                             </tr>
 
                                             <tr class="shipping">
                                                 <th>Frete</th>
-                                                <td>$5.00 <small>prazo de 0 dia(s)</small></td>
+                                                <td>€{function="formatPrice($cart.vlfreight)"}  {if="$cart.vlfreight > 0"} <small>Açores e Madeira</small> {/if} {if="$cart.vlfreight == 0"} <small>Continente</small> {/if} {if="$cart.nrdays > 0"} <small>prazo de {$cart.nrdays} dia(s)</small>{/if}</td>
                                             </tr>
 
                                             <tr class="order-total">
                                                 <th>Total</th>
-                                                <td><strong><span class="amount">$705.00</span></strong> </td>
+                                                <td><strong><span class="amount">€{function="formatPrice($cart.vltotal)"}</span></strong> </td>
                                             </tr>
                                         </tbody>
                                     </table>
