Added Login on the Site

--- a/views/cart.html
+++ b/views/cart.html
@@ -23,8 +23,9 @@
                             
                             
                             <div class="alert alert-danger" role="alert">
-                            
+                                
                             </div>
+                            
                             
 
                             <table cellspacing="0" class="shop_table cart">
@@ -95,17 +96,17 @@
                                         <tbody>
                                             <tr class="cart-subtotal">
                                                 <th>Subtotal</th>
-                                                <td><span class="amount">€{function="formatPrice($cart.vlsubtotal)"}</span></td>
+                                                <td><span class="amount">{if="$cart.vlsubtotal > 0"} €{function="formatPrice($cart.vlsubtotal)"} {else} 0 {/if} </span></td>
                                             </tr>
 
                                             <tr class="shipping">
                                                 <th>Frete</th>
-                                                <td>€{function="formatPrice($cart.vlfreight)"}  {if="$cart.vlfreight > 0"} <small>Açores e Madeira</small> {/if} {if="$cart.vlfreight == 0"} <small>Continente</small> {/if} {if="$cart.nrdays > 0"} <small>prazo de {$cart.nrdays} dia(s)</small>{/if}</td>
+                                                <td>{if="$cart.vlsubtotal == 0"} 0 {else} €{function="formatPrice($cart.vlfreight)"} {if="$cart.vlfreight > 0"} <small>Açores e Madeira</small> {/if} {if="$cart.vlfreight == 0"} <small>Continente</small> {/if} {/if} {if="$cart.nrdays > 0"} <small>prazo de {$cart.nrdays} dia(s)</small>{/if}</td>
                                             </tr>
 
                                             <tr class="order-total">
                                                 <th>Total</th>
-                                                <td><strong><span class="amount">€{function="formatPrice($cart.vltotal)"}</span></strong> </td>
+                                                <td><strong><span class="amount">{if="$cart.vlsubtotal == 0"} 0 {else} €{function="formatPrice($cart.vltotal)"}</span></strong> {/if} </td>
                                             </tr>
                                         </tbody>
                                     </table>
