--- a/views/login.html
+++ b/views/login.html
@@ -49,27 +49,30 @@
             </div>
             <div class="col-md-6">
                 
+                {if="$errorRegister != ''"}
                 <div class="alert alert-danger">
-                    Error!
+                    {$errorRegister}
                 </div>
+                {/if}
 
                 <form id="register-form-wrap" action="/register" class="register" method="post">
                     <h2>Criar conta</h2>
                     <p class="form-row form-row-first">
                         <label for="nome">Nome Completo <span class="required">*</span>
                         </label>
-                        <input type="text" id="nome" name="name" class="input-text" value="">
+                        <input type="text" id="nome" name="name" class="input-text" value="{$registerValues.name}">
                     </p>
                     <p class="form-row form-row-first">
                         <label for="email">E-mail <span class="required">*</span>
                         </label>
-                        <input type="email" id="email" name="email" class="input-text" value="">
+                        <input type="email" id="email" name="email" class="input-text" value="{$registerValues.email}">
                     </p>
                     <p class="form-row form-row-first">
                         <label for="phone">Telefone
                         </label>
-                        <input type="text" id="phone" name="phone" class="input-text" value="">
+                        <input type="text" id="phone" name="phone" class="input-text" value="{$registerValues.phone}">
                     </p>
+
                     <p class="form-row form-row-last">
                         <label for="senha">Senha <span class="required">*</span>
                         </label>
@@ -78,7 +81,16 @@
                     <div class="clear"></div>
 
                     <p class="form-row">
+                        
                         <input type="submit" value="Criar Conta" name="login" class="button">
+
+
+
+
+
+
+
+
                     </p>
 
                     <div class="clear"></div>
