--- a/views/login.html
+++ b/views/login.html
@@ -74,6 +74,12 @@
                     </p>
 
                     <p class="form-row form-row-last">
+                        <label for="username">Username <span class="required">*</span>
+                        </label>
+                        <input type="text" id="username" name="username" class="input-text">
+                    </p>
+
+                    <p class="form-row form-row-last">
                         <label for="senha">Senha <span class="required">*</span>
                         </label>
                         <input type="password" id="senha" name="password" class="input-text">
