--- a/views/checkout.html
+++ b/views/checkout.html
@@ -21,9 +21,11 @@
 							<div class="row">
 								<div class="col-md-12">
 
+									{if="$error != ''"}
 									<div class="alert alert-danger">
-										Error!
+										{$error}
 									</div>
+									{/if}
 
 									<div class="woocommerce-billing-fields">
 										<h3>Endereço de entrega</h3>
@@ -31,7 +33,7 @@
 											<label class="" for="billing_address_1">Código Postal <abbr title="required" class="required">*</abbr>
 											</label>
                                             <input type="text" value="{$cart.deszipcode}" placeholder="0000-000" id="billing_address_1" name="zipcode" class="input-text ">
-                                            <input type="submit" value="Atualizar CEP" id="place_order" class="button alt" formaction="/checkout" formmethod="get">
+                                            <input type="submit" value="Atualizar Código Postal" id="place_order" class="button alt" formaction="/cart/freight/updatezipcode" formmethod="get">
 										</p>
 										<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
 											<label class="" for="billing_address_1">Endereço <abbr title="required" class="required">*</abbr>
@@ -41,20 +43,13 @@
 										<p id="billing_address_2_field" class="form-row form-row-wide address-field">
 											<input type="text" value="{$address.descomplement}" placeholder="Complemento (opcional)" id="billing_address_2" name="descomplement" class="input-text ">
                                         </p>
-                                        <p id="billing_district_field" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_district">Bairro <abbr title="required" class="required">*</abbr>
-											</label>
-											<input type="text" value="{$address.desdistrict}" placeholder="Cidade" id="billing_district" name="desdistrict" class="input-text ">
-										</p>
+                                        
 										<p id="billing_city_field" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
 											<label class="" for="billing_city">Cidade <abbr title="required" class="required">*</abbr>
 											</label>
 											<input type="text" value="{$address.descity}" placeholder="Cidade" id="billing_city" name="descity" class="input-text ">
 										</p>
-										<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
-											<label class="" for="billing_state">Estado</label>
-											<input type="text" id="billing_state" name="desstate" placeholder="Estado" value="{$address.desstate}" class="input-text ">
-										</p>
+										
 										<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
 											<label class="" for="billing_state">País</label>
 											<input type="text" id="billing_state" name="descountry" placeholder="País" value="{$address.descountry}" class="input-text ">
@@ -70,39 +65,39 @@
 													</tr>
 												</thead>
 												<tbody>
-                                                    
+                                                    {loop="$products"}
 													<tr class="cart_item">
 														<td class="product-name">
-															Ship Your Idea <strong class="product-quantity">× 1</strong> 
+															{$value.desproduct} <strong class="product-quantity">× {$value.nrqtd}</strong> 
 														</td>
 														<td class="product-total">
-															<span class="amount">$700.00</span>
+															<span class="amount">€{function="formatPrice($value.vltotal)"}</span>
 														</td>
                                                     </tr>
-                                                    
+                                                    {/loop}
 												</tbody>
 												<tfoot>
 													<tr class="cart-subtotal">
 														<th>Subtotal</th>
-														<td><span class="amount">$700.00</span>
+														<td><span class="amount">€{function="formatPrice($cart.vlsubtotal)"}</span>
 														</td>
 													</tr>
 													<tr class="shipping">
 														<th>Frete</th>
 														<td>
-															$5.00
+															€{function="formatPrice($cart.vlfreight)"}
 															<input type="hidden" class="shipping_method" value="free_shipping" id="shipping_method_0" data-index="0" name="shipping_method[0]">
 														</td>
 													</tr>
 													<tr class="order-total">
 														<th>Total do Pedido</th>
-														<td><strong><span class="amount">$705.00</span></strong> </td>
+														<td><strong><span class="amount">€{function="formatPrice($cart.vltotal)"}</span></strong> </td>
 													</tr>
 												</tfoot>
 											</table>
 											<div id="payment">
 												<div class="form-row place-order">
-													<input type="submit" data-value="Place order" value="Continuar" id="place_order" name="woocommerce_checkout_place_order" class="button alt">
+													<input type="submit" data-value="Place order" value="Continuar" id="place_order" name="woocommerce_checkout_place_order" formmethod="post" formaction="/order" class="button alt">
 												</div>
 												<div class="clear"></div>
 											</div>
