--- a/views/checkout.html
+++ b/views/checkout.html
@@ -97,7 +97,7 @@
 											</table>
 											<div id="payment">
 												<div class="form-row place-order">
-													<input type="submit" data-value="Place order" value="Continuar" id="place_order" name="woocommerce_checkout_place_order" formmethod="post" formaction="/order" class="button alt">
+													<input type="submit" data-value="Place order" value="Continuar" id="place_order" name="woocommerce_checkout_place_order" formmethod="post" class="button alt">
 												</div>
 												<div class="clear"></div>
 											</div>
